新增Plus板块页面，修改业务逻辑

--- a/sale.html
+++ b/sale.html
@@ -34,9 +34,9 @@
 		<div id="wrapper">
 			<div id="menu">
 				<ul class="nav">	
-					<li><a href="#">围诚热点</a></li>
+					<li><a href="indexx.html">围诚热点</a></li>
 					<li><a href="bbs.html">围诚Plus</a></li>
-					<li class="cur"><a href="#">围诚三天</a></li>
+					<li class="cur"><a href="sale.html">围诚三天</a></li>
 					<li><a href="javascript:void(0);">我的围诚</a></li>
 				</ul>
 			</div>
@@ -46,7 +46,7 @@
 		<h2 class="tt">Plus主发布<span>(本平台不提供线上支付，仅提供Plus主发布物品转让信息，可卖可租，但平台不提供交易，只提供交易时间、交易地点和提醒功能，发布的信息三天内有效。)</span></h2>
 		<div class="container demo-3 no-js">
 			<section id="grid" class="grid clearfix">
-				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
+				<!-- <a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
 					<figure>
 						<img src="images/local/sale_bag.jpg" />
 						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
@@ -57,177 +57,9 @@
 							<button>查看详情</button>
 						</figcaption>
 					</figure>
-				</a>
-				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-					<figure>
-						<img src="images/local/sale_bag.jpg" />
-						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-						<figcaption>
-							<h2>迷彩双肩包</h2>
-							<p>交易地点：<span>广州商学院</span></p>
-							<p>发布时间：<span>2017-11-10</span></p>
-							<button>查看详情</button>
-						</figcaption>
-					</figure>
-				</a>
-				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-					<figure>
-						<img src="images/local/sale_bag.jpg" />
-						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-						<figcaption>
-							<h2>迷彩双肩包</h2>
-							<p>交易地点：<span>广州商学院</span></p>
-							<p>发布时间：<span>2017-11-10</span></p>
-							<button>查看详情</button>
-						</figcaption>
-					</figure>
-				</a>
-				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-					<figure>
-						<img src="images/local/sale_bag.jpg" />
-						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-						<figcaption>
-							<h2>迷彩双肩包</h2>
-							<p>交易地点：<span>广州商学院</span></p>
-							<p>发布时间：<span>2017-11-10</span></p>
-							<button>查看详情</button>
-						</figcaption>
-					</figure>
-				</a>
-				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-					<figure>
-						<img src="images/local/sale_bag.jpg" />
-						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-						<figcaption>
-							<h2>迷彩双肩包</h2>
-							<p>交易地点：<span>广州商学院</span></p>
-							<p>发布时间：<span>2017-11-10</span></p>
-							<button>查看详情</button>
-						</figcaption>
-					</figure>
-				</a>
-				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-					<figure>
-						<img src="images/local/sale_bag.jpg" />
-						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-						<figcaption>
-							<h2>迷彩双肩包</h2>
-							<p>交易地点：<span>广州商学院</span></p>
-							<p>发布时间：<span>2017-11-10</span></p>
-							<button>查看详情</button>
-						</figcaption>
-					</figure>
-				</a>
-				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-					<figure>
-						<img src="images/local/sale_bag.jpg" />
-						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-						<figcaption>
-							<h2>迷彩双肩包</h2>
-							<p>交易地点：<span>广州商学院</span></p>
-							<p>发布时间：<span>2017-11-10</span></p>
-							<button>查看详情</button>
-						</figcaption>
-					</figure>
-				</a>
-				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-					<figure>
-						<img src="images/local/sale_bag.jpg" />
-						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-						<figcaption>
-							<h2>迷彩双肩包</h2>
-							<p>交易地点：<span>广州商学院</span></p>
-							<p>发布时间：<span>2017-11-10</span></p>
-							<button>查看详情</button>
-						</figcaption>
-					</figure>
-				</a>
-				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-					<figure>
-						<img src="images/local/sale_bag.jpg" />
-						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-						<figcaption>
-							<h2>迷彩双肩包</h2>
-							<p>交易地点：<span>广州商学院</span></p>
-							<p>发布时间：<span>2017-11-10</span></p>
-							<button>查看详情</button>
-						</figcaption>
-					</figure>
-				</a>
-				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-					<figure>
-						<img src="images/local/sale_bag.jpg" />
-						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-						<figcaption>
-							<h2>迷彩双肩包</h2>
-							<p>交易地点：<span>广州商学院</span></p>
-							<p>发布时间：<span>2017-11-10</span></p>
-							<button>查看详情</button>
-						</figcaption>
-					</figure>
-				</a>
-				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-					<figure>
-						<img src="images/local/sale_bag.jpg" />
-						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-						<figcaption>
-							<h2>迷彩双肩包</h2>
-							<p>交易地点：<span>广州商学院</span></p>
-							<p>发布时间：<span>2017-11-10</span></p>
-							<button>查看详情</button>
-						</figcaption>
-					</figure>
-				</a>
-				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-					<figure>
-						<img src="images/local/sale_bag.jpg" />
-						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-						<figcaption>
-							<h2>迷彩双肩包</h2>
-							<p>交易地点：<span>广州商学院</span></p>
-							<p>发布时间：<span>2017-11-10</span></p>
-							<button>查看详情</button>
-						</figcaption>
-					</figure>
-				</a>
-				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-					<figure>
-						<img src="images/local/sale_bag.jpg" />
-						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-						<figcaption>
-							<h2>迷彩双肩包</h2>
-							<p>交易地点：<span>广州商学院</span></p>
-							<p>发布时间：<span>2017-11-10</span></p>
-							<button>查看详情</button>
-						</figcaption>
-					</figure>
-				</a>
-				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-					<figure>
-						<img src="images/local/sale_bag.jpg" />
-						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-						<figcaption>
-							<h2>迷彩双肩包</h2>
-							<p>交易地点：<span>广州商学院</span></p>
-							<p>发布时间：<span>2017-11-10</span></p>
-							<button>查看详情</button>
-						</figcaption>
-					</figure>
-				</a>
-				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-					<figure>
-						<img src="images/local/sale_bag.jpg" />
-						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-						<figcaption>
-							<h2>迷彩双肩包</h2>
-							<p>交易地点：<span>广州商学院</span></p>
-							<p>发布时间：<span>2017-11-10</span></p>
-							<button>查看详情</button>
-						</figcaption>
-					</figure>
-				</a>
+				</a> -->
 			</section>
-		</div><!-- /container -->
+		</div>
 	</div>
 	<div class="fabu-lump">
 		<a href="javascript:void(0);"><i></i>我要发布</a>
@@ -426,7 +258,23 @@
 		
 	</div>
 	<!-- 登录界面 end-->
-
+	<div class="footer-lump">
+		<div class="layout">
+			<ul class="clearfix">
+				<li><a href="#">围诚热点</a></li>
+				<li><a href="#">围诚论坛</a></li>
+				<li class="cur"><a href="#">围诚二手</a></li>
+				<li><a href="#">我的围诚</a></li>
+			</ul>
+			<div class="txt"><p>广告合作热线： 温先生 13660449184  麦先生 15999987056 <br/>
+				网站运营<span>：</span>围诚社区<br/>
+				公司地址<span>：</span>广东省广州市黄埔区九龙镇广州商学院<br/>
+			版权所有：Copyright &copy; 2017-2020 物联科技有限公司</p> 
+			<div class="img-box">
+				<img src="images/common/other.png">
+			</div>
+		</div>
+	</div>
 
 	<script src="js/sale.js"></script>
 	<script src="js/common.js"></script>
