--- a/bbs_tantian.html
+++ b/bbs_tantian.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>围诚Plus</title>
+	<title>谈天说地</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" href="css/base.css"></link>
 	<link rel="stylesheet" href="css/common.css"></link>
@@ -25,7 +25,7 @@
 	   $.ajax({  
 	   	type: "get",  
 			// 老麦提供接口
-			url: "data/bbs_li.json",  
+			url: "data/bbs_tantiao.json",  
 			dataType: "json",
 			// data:update_count, //每次加载最后一条的索引值
 			success: function (res) {  		
@@ -341,168 +341,6 @@
 <div id="modal-alert2" class="iziModal"></div>
 <script src="js/bbs.js"></script>
 <script src="js/placeholder.js"></script> 
-<script>
-	   /* 分页逻辑实现 */
-	   var cur_index;
-	   $('.pagination-lump .first').click(function(){
-	   	cur_index = 1;
-	   	console.log("传递给后台的页数为" + cur_index);
-	   	$.ajax({
-	   		type: "POST",  
-			// 老麦提供接口
-			url: "data/bbs_li2.json",  
-			dataType: "json",
-			data:JSON.stringify(cur_index),		
-			// data:update_count, //每次加载最后一条的索引值
-			success: function (res) {  
-				$('.left-content .content ul').empty();
-				var len = res.item.length;
-				var i = 0;
-				for( i = 0; i < len; i++){
-					$('.left-content .content ul').append('<li class="clearfix"><div class="icon fl"><a href="#"><img src='+res.item[i].img+'></a></div><div class="fl"><div class="clearfix tt"><span class="nor fl">'+res.item[i].topic+'</span><a class="title fl" href="#">'+res.item[i].tt+'</a></div><div class="txt"><p><span class="w">'+res.item[i].user_name+'</span>&nbsp;发表于：<span class="time">'+res.item[i].start_time+'</span>&nbsp;最新回复：<span class="new">'+res.item[i].lastest_time+'</span></p></div></div><div class="fr mt-10 mr-10"><span class="comment">'+res.item[i].comment+'</span></div><div style="display: none;" class="tooltip"><div id='+"tooltip"+i+'><div class="clearfix"><div class="img-box fl"><img src='+res.item[i].img+'><div class="talk clearfix"><a href="#" class="fl">+私聊</a></div></div><div class="h-102 fl"><p class="name">'+res.item[i].user_mes.name+'</p><p class="school">'+res.item[i].user_mes.school+'</p><span class="sex">'+res.item[i].user_mes.sex+'</span><span class="year ml-5">'+res.item[i].user_mes.year+'<span><p>上次登陆时间：<span class="time">2017-10-17</span></p></div></div></div></div></li>');
-					// top 表示是否为置顶
-					if(res.item[i].top){
-						$('.left-content li span.nor').removeClass("nor").addClass("kind");
-						$('.left-content li a.title').addClass("light");
-					}
-					$('.left-content li a.title').attr("href",res.item[i].a_href);
-				}
-				console.log("动态列表加载完毕....");
-				$('.left-content .content').on('mouseover','img',function(){
-					var now_index = $(this).parents("li").index();
-					tooltip.pop(this, '#tooltip'+now_index, {position:1, offsetX:-20, effect:'slide'})
-				});
-			},
-			error:function(XMLHttpRequest, textStatus, errorThrown){  
-				console.log("请求对象XMLHttpRequest: " + XMLHttpRequest);  
-				console.log("错误类型textStatus: " + textStatus);  
-				console.log("异常对象errorThrown: " + errorThrown);  
-			}  	
-		})
-	   });
 
-	   $('.pagination-lump .prev').click(function(){
-	   	cur_index = $(".cur-page span").html();
-	   	if(cur_index != 1){
-	   		cur_index--;
-	   		console.log("传递给后台的页数为" + cur_index);
-	   		$.ajax({
-	   			type: "POST",  
-			// 老麦提供接口
-			url: "data/bbs_li2.json",  
-			dataType: "json",
-			data:JSON.stringify(cur_index),		
-			// data:update_count, //每次加载最后一条的索引值
-			success: function (res) {  
-				$('.left-content .content ul').empty();
-				var len = res.item.length;
-				var i = 0;
-				for( i = 0; i < len; i++){
-					$('.left-content .content ul').append('<li class="clearfix"><div class="icon fl"><a href="#"><img src='+res.item[i].img+'></a></div><div class="fl"><div class="clearfix tt"><span class="nor fl">'+res.item[i].topic+'</span><a class="title fl" href="#">'+res.item[i].tt+'</a></div><div class="txt"><p><span class="w">'+res.item[i].user_name+'</span>&nbsp;发表于：<span class="time">'+res.item[i].start_time+'</span>&nbsp;最新回复：<span class="new">'+res.item[i].lastest_time+'</span></p></div></div><div class="fr mt-10 mr-10"><span class="comment">'+res.item[i].comment+'</span></div><div style="display: none;" class="tooltip"><div id='+"tooltip"+i+'><div class="clearfix"><div class="img-box fl"><img src='+res.item[i].img+'><div class="talk clearfix"><a href="#" class="fl">+私聊</a></div></div><div class="h-102 fl"><p class="name">'+res.item[i].user_mes.name+'</p><p class="school">'+res.item[i].user_mes.school+'</p><span class="sex">'+res.item[i].user_mes.sex+'</span><span class="year ml-5">'+res.item[i].user_mes.year+'<span><p>上次登陆时间：<span class="time">2017-10-17</span></p></div></div></div></div></li>');
-					// top 表示是否为置顶
-					if(res.item[i].top){
-						$('.left-content li span.nor').removeClass("nor").addClass("kind");
-						$('.left-content li a.title').addClass("light");
-					}
-					$('.left-content li a.title').attr("href",res.item[i].a_href);
-				}
-				console.log("动态列表加载完毕....");
-				$('.left-content .content').on('mouseover','img',function(){
-					var now_index = $(this).parents("li").index();
-					tooltip.pop(this, '#tooltip'+now_index, {position:1, offsetX:-20, effect:'slide'})
-				});
-				$(".cur-page span").html(cur_index);
-			},
-			error:function(XMLHttpRequest, textStatus, errorThrown){  
-				console.log("请求对象XMLHttpRequest: " + XMLHttpRequest);  
-				console.log("错误类型textStatus: " + textStatus);  
-				console.log("异常对象errorThrown: " + errorThrown);  
-			}  	
-		});
-	   	}
-	   });
-
-	   $('.pagination-lump .next').click(function(){
-	   	cur_index = $(".cur-page span").html();
-	   	cur_index++;
-	   	console.log("传递给后台的页数为" + cur_index);
-	   	$.ajax({
-	   		type: "POST",  
-			// 老麦提供接口
-			url: "data/bbs_li2.json",  
-			dataType: "json",
-			data:JSON.stringify(cur_index),		
-			// data:update_count, //每次加载最后一条的索引值
-			success: function (res) {  
-				$('.left-content .content ul').empty();
-				var len = res.item.length;
-				var i = 0;
-				for( i = 0; i < len; i++){
-					$('.left-content .content ul').append('<li class="clearfix"><div class="icon fl"><a href="#"><img src='+res.item[i].img+'></a></div><div class="fl"><div class="clearfix tt"><span class="nor fl">'+res.item[i].topic+'</span><a class="title fl" href="#">'+res.item[i].tt+'</a></div><div class="txt"><p><span class="w">'+res.item[i].user_name+'</span>&nbsp;发表于：<span class="time">'+res.item[i].start_time+'</span>&nbsp;最新回复：<span class="new">'+res.item[i].lastest_time+'</span></p></div></div><div class="fr mt-10 mr-10"><span class="comment">'+res.item[i].comment+'</span></div><div style="display: none;" class="tooltip"><div id='+"tooltip"+i+'><div class="clearfix"><div class="img-box fl"><img src='+res.item[i].img+'><div class="talk clearfix"><a href="#" class="fl">+私聊</a></div></div><div class="h-102 fl"><p class="name">'+res.item[i].user_mes.name+'</p><p class="school">'+res.item[i].user_mes.school+'</p><span class="sex">'+res.item[i].user_mes.sex+'</span><span class="year ml-5">'+res.item[i].user_mes.year+'<span><p>上次登陆时间：<span class="time">2017-10-17</span></p></div></div></div></div></li>');
-					// top 表示是否为置顶
-					if(res.item[i].top){
-						$('.left-content li span.nor').removeClass("nor").addClass("kind");
-						$('.left-content li a.title').addClass("light");
-					}
-					$('.left-content li a.title').attr("href",res.item[i].a_href);
-				}
-				console.log("动态列表加载完毕....");
-				$('.left-content .content').on('mouseover','img',function(){
-					var now_index = $(this).parents("li").index();
-					tooltip.pop(this, '#tooltip'+now_index, {position:1, offsetX:-20, effect:'slide'})
-				});
-				$(".cur-page span").html(cur_index);
-			},
-			error:function(XMLHttpRequest, textStatus, errorThrown){  
-				console.log("请求对象XMLHttpRequest: " + XMLHttpRequest);  
-				console.log("错误类型textStatus: " + textStatus);  
-				console.log("异常对象errorThrown: " + errorThrown);  
-			}  	
-		});
-	   });
-
-	   $('.pagination-lump .search').click(function(){
-	   	cur_index = $(".pagination-lump .ipt").val();
-	   	if(cur_index != ""){
-	   		console.log("传递给后台的页数为" + cur_index);
-	   		$.ajax({
-	   			type: "POST",  
-			// 老麦提供接口
-			url: "data/bbs_li2.json",  
-			dataType: "json",
-			data:JSON.stringify(cur_index),		
-			// data:update_count, //每次加载最后一条的索引值
-			success: function (res) {  
-				$('.left-content .content ul').empty();
-				var len = res.item.length;
-				var i = 0;
-				for( i = 0; i < len; i++){
-					$('.left-content .content ul').append('<li class="clearfix"><div class="icon fl"><a href="#"><img src='+res.item[i].img+'></a></div><div class="fl"><div class="clearfix tt"><span class="nor fl">'+res.item[i].topic+'</span><a class="title fl" href="#">'+res.item[i].tt+'</a></div><div class="txt"><p><span class="w">'+res.item[i].user_name+'</span>&nbsp;发表于：<span class="time">'+res.item[i].start_time+'</span>&nbsp;最新回复：<span class="new">'+res.item[i].lastest_time+'</span></p></div></div><div class="fr mt-10 mr-10"><span class="comment">'+res.item[i].comment+'</span></div><div style="display: none;" class="tooltip"><div id='+"tooltip"+i+'><div class="clearfix"><div class="img-box fl"><img src='+res.item[i].img+'><div class="talk clearfix"><a href="#" class="fl">+私聊</a></div></div><div class="h-102 fl"><p class="name">'+res.item[i].user_mes.name+'</p><p class="school">'+res.item[i].user_mes.school+'</p><span class="sex">'+res.item[i].user_mes.sex+'</span><span class="year ml-5">'+res.item[i].user_mes.year+'<span><p>上次登陆时间：<span class="time">2017-10-17</span></p></div></div></div></div></li>');
-					// top 表示是否为置顶
-					if(res.item[i].top){
-						$('.left-content li span.nor').removeClass("nor").addClass("kind");
-						$('.left-content li a.title').addClass("light");
-					}
-					$('.left-content li a.title').attr("href",res.item[i].a_href);
-				}
-				console.log("动态列表加载完毕....");
-				$('.left-content .content').on('mouseover','img',function(){
-					var now_index = $(this).parents("li").index();
-					tooltip.pop(this, '#tooltip'+now_index, {position:1, offsetX:-20, effect:'slide'})
-				});
-				$(".cur-page span").html(cur_index);
-			},
-			error:function(XMLHttpRequest, textStatus, errorThrown){  
-				alert("请求服务器失败,请重试....");
-				console.log("请求对象XMLHttpRequest: " + XMLHttpRequest);  
-				console.log("错误类型textStatus: " + textStatus);  
-				console.log("异常对象errorThrown: " + errorThrown);  
-			}  	
-		});
-	   	}else{
-	   		alert("请输入有效数字！");
-	   	}
-	   });
-</script>
 </body>
 </html>
