--- a/person-center.html
+++ b/person-center.html
@@ -21,10 +21,10 @@
 	<!-- 顶部 end -->
 	<div class="welcome-lump clearfix">
 		<div class="fl">
-			<p>用户 <span class="phone">13660449184</span> 您好</p>
+			<p>用户 <span class="phone"></span> 您好</p>
 		</div>
 		<div class="fl ml-30">
-			<p>当前积分：<span class="point">450</span></p>
+			<p>当前积分：<span class="point"></span></p>
 		</div>
 		<div class="fl ml-200">
 			<p>围诚社区个人信息管理平台</p>
@@ -33,141 +33,149 @@
 			<a href="#">返回首页</a>
 		</div>
 	</div>
-		
-	</div>
-	<div class="setting-center">
-		<div class="layout clearfix">
-			<div class="list fl">
-				<ul class="left-list">
-					<li class="cur"><a href="#"><i class="edit"></i>编辑资料</a></li>
-					<li><a href="#"><i class="shop"></i>物品发布</a></li>
-					<li><a href="#"><i class="update"></i>好友管理</a></li>
-					<li><a href="#"><i class="point"></i>积分详情 </a></li>
-					<li><a href="#"><i class="dong"></i>我的帖子</a></li>
-					<li><a href="#"><i class="contact"></i>围诚统计</a></li>
-				</ul>
-			</div>
-			<div class="list-content fl">
-				<ul>
-					<li class="edit-content">
-						<div class="tt clearfix">
-							<p class="fl">编辑资料</p>
-							<span class="fl">可在当前板块修改您的个人信息以及个性资料</span>
-						</div>
-						<div class="content">
-							<dl>
-								<dt class="show-message clearfix">
-									<div class="head-img fl">
-										<img class="img-preview" src="images/local/init.jpg">
-										<p class="upload">更改头像</p>
 
-									</div>
-									<div class="txt fl">
-										<div class="ml-30 fl">
-											<p>用户ID：<span class="id">wcsq_201710170021</span></p>
-											<p class="mt-10">昵称：<span class="name"></span></p>
-											<p class="mt-10">性别：<span class="sex"></span></p>
-											<p class="mt-10">年龄：<span class="year"></span></p>
-										</div>
-										<div class="ml-100 fl">
-											<p>学校：<span class="school"></span></p>
-											<p class="mt-10">专业：<span class="major"></span></p>
-											<p class="mt-10">地区：<span class="loc"></span></p>
-											<p class="mt-10">围诚等级：<span class="rank"></span></p>
-										</div>
-									</div>
-								</dt>
-								<dt class="change clearfix">
-									<div class="fl">
-										<div class="name">
-											<label>昵称：</label>
-											<input type="text" placeholder="填写昵称...." class="ipt" id="name">
-										</div>
-										<div class="sex mt-20">
-											<label>性别：</label>
-											<select class="ipt sel" id="sex">
-												<option>男</option>
-												<option>女</option>
-												<option>保密</option>
-											</select>
-										</div>
-										<div class="name mt-20">
-											<label>年龄：</label>
-											<input type="text" placeholder="填写年龄...." class="ipt old" onkeyup="this.value=this.value.replace(/\D/g,'')" onafterpaste="this.value=this.value.replace(/\D/g,'')" maxlength="2" id="year">
-											<input type="checkbox" id="old_c" class="ml-10">
-											<label for="old_c" style="font-size: 14px;" class="secrecy">保密</label>
-										</div>
-									</div>
-									<div class="fl ml-100">
-										<div class="school">
-											<label>学校：</label>
-											<input type="text" placeholder="填写学校...." class="ipt" id="school">
-										</div>
-										<div class="school mt-20">
-											<label>专业：</label>
-											<input type="text" placeholder="填写专业...." class="ipt" id="major">
-										</div>
-										<div class="school mt-20">
-											<label>居住地：</label>
-											<input type="text" placeholder="填写居住地...." class="ipt" id="loc">
-										</div>
-									</div>
-									<div class="fl">
-										<p class="change-message">更改信息</p>
-										<p style="margin-top: 5px; color: red; text-align: right;">未填写即默认保密哦</p>
-									</div>
-								</dt>
-								<dt class="change change-password clearfix">
-									<div class="fl" style="width: 450px;">
-										<div class="oldpassword">
-											<label>请输入原密码：</label>
-											<input type="password" placeholder="填写初始密码...." class="ipt origin">
-											<span class="res" style="margin-left: 10px;"></span>
-										</div>
-										<div class="oldpassword mt-20">
-											<label>请输入新密码：</label>
-											<input type="password" placeholder="填写新密码...." class="ipt now">
-										</div>
-										<div class="oldpassword mt-20">
-											<label>请再次确认新密码：</label>
-											<input type="password" placeholder="再次填写新密码...." class="ipt confirm">
+</div>
+<div class="setting-center">
+	<div class="layout clearfix">
+		<div class="list fl">
+			<ul class="left-list">
+				<li class="cur"><a href="#"><i class="edit"></i>编辑资料</a></li>
+				<li><a href="#"><i class="shop"></i>物品发布</a></li>
+				<li><a href="#"><i class="update"></i>好友管理</a></li>
+				<li><a href="#"><i class="point"></i>积分详情 </a></li>
+				<li><a href="#"><i class="dong"></i>我的帖子</a></li>
+				<li><a href="#"><i class="contact"></i>围诚统计</a></li>
+			</ul>
+		</div>
+		<div class="list-content fl">
+			<ul>
+				<li class="edit-content">
+					<div class="tt clearfix">
+						<p class="fl">编辑资料</p>
+						<span class="fl">可在当前板块修改您的个人信息以及个性资料</span>
+					</div>
+					<div class="content">
+						<dl>
+							<dt class="show-message clearfix">
+								<div class="head-img fl">
+									<img class="img-preview" src="images/local/init.jpg">
+									<p class="upload">更改头像</p>
 
-											<p class="tips" style="margin: 2px 0 0 170px; color: red"></p>
-											<p class="res" style="margin: 2px 0 0 170px; color: green"></p>
-										</div>
+								</div>
+								<div class="txt fl">
+									<div class="ml-30 fl">
+										<p>用户ID：<span class="id">wcsq_201710170021</span></p>
+										<p class="mt-10">昵称：<span class="name"></span></p>
+										<p class="mt-10">性别：<span class="sex"></span></p>
+										<p class="mt-10">年龄：<span class="year"></span></p>
 									</div>
-									<div class="submit fl"><p class="change-pw">更改密码</p><img src="images/local/timg.gif"></div>
-								</dt>
-							</dl>
-						</div>
-					</li>
-					<li class="hide">2017-2020</li>
-					<li class="hide">3</li>
-					<li class="hide">450</li>
-					<li class="hide">5</li>
-					<li class="user-statistics hide">
-						<div class="tt clearfix">
-							<p class="fl">围诚统计</p>
-							<span class="fl">可查询围城社区用户数据</span>
-						</div>
-						<div id="main" style="width: 600px; height:400px; margin: 30px auto"></div>
-						<div id="main1" style="width: 800px; height:400px; margin: 30px auto"></div>
-						<div class="advertising-negotiation">
-								<p class="tc">本社区提供高校活动宣传及广告投放业务。合作热线：13660449184 温先生 WeChat：gswhh2014</p>
-						</div>
-					</li>
-				</ul>
-			</div>
+									<div class="ml-100 fl">
+										<p>学校：<span class="school"></span></p>
+										<p class="mt-10">专业：<span class="major"></span></p>
+										<p class="mt-10">地区：<span class="loc"></span></p>
+										<p class="mt-10">围诚等级：<span class="rank"></span></p>
+									</div>
+								</div>
+							</dt>
+							<dt class="change clearfix">
+								<div class="fl">
+									<div class="name">
+										<label>昵称：</label>
+										<input type="text" placeholder="填写昵称...." class="ipt" id="name">
+									</div>
+									<div class="sex mt-20">
+										<label>性别：</label>
+										<select class="ipt sel" id="sex">
+											<option>男</option>
+											<option>女</option>
+											<option>保密</option>
+										</select>
+									</div>
+									<div class="name mt-20">
+										<label>年龄：</label>
+										<input type="text" placeholder="填写年龄...." class="ipt old" onkeyup="this.value=this.value.replace(/\D/g,'')" onafterpaste="this.value=this.value.replace(/\D/g,'')" maxlength="2" id="year">
+										<input type="checkbox" id="old_c" class="ml-10">
+										<label for="old_c" style="font-size: 14px;" class="secrecy">保密</label>
+									</div>
+								</div>
+								<div class="fl ml-100">
+									<div class="school">
+										<label>学校：</label>
+										<input type="text" placeholder="填写学校...." class="ipt" id="school">
+									</div>
+									<div class="school mt-20">
+										<label>专业：</label>
+										<input type="text" placeholder="填写专业...." class="ipt" id="major">
+									</div>
+									<div class="school mt-20">
+										<label>居住地：</label>
+										<input type="text" placeholder="填写居住地...." class="ipt" id="loc">
+									</div>
+								</div>
+								<div class="fl">
+									<p class="change-message">更改信息</p>
+									<p style="margin-top: 5px; color: red; text-align: right;">未填写即默认保密哦</p>
+								</div>
+							</dt>
+							<dt class="change change-password clearfix">
+								<div class="fl" style="width: 450px;">
+									<div class="oldpassword">
+										<label>请输入原密码：</label>
+										<input type="password" placeholder="填写初始密码...." class="ipt origin">
+										<span class="res" style="margin-left: 10px;"></span>
+									</div>
+									<div class="oldpassword mt-20">
+										<label>请输入新密码：</label>
+										<input type="password" placeholder="填写新密码...." class="ipt now">
+									</div>
+									<div class="oldpassword mt-20">
+										<label>请再次确认新密码：</label>
+										<input type="password" placeholder="再次填写新密码...." class="ipt confirm">
+
+										<p class="tips" style="margin: 2px 0 0 170px; color: red"></p>
+										<p class="res" style="margin: 2px 0 0 170px; color: green"></p>
+									</div>
+								</div>
+								<div class="submit fl"><p class="change-pw">更改密码</p><img src="images/local/timg.gif"></div>
+							</dt>
+						</dl>
+					</div>
+				</li>
+				<li class="things-fabu hide">
+					<div class="tt clearfix">
+						<p class="fl">物品发布</p>
+						<span class="fl">查询物品发布状态</span>
+					</div>
+					<div class="message">
+						
+					</div>
+				</li>
+				<li class="hide">3</li>
+				<li class="hide">450</li>
+				<li class="hide">5</li>
+				<li class="user-statistics hide">
+					<div class="tt clearfix">
+						<p class="fl">围诚统计</p>
+						<span class="fl">可查询围城社区用户数据</span>
+					</div>
+					<div id="main" style="width: 600px; height:400px; margin: 30px auto"></div>
+					<div id="main1" style="width: 800px; height:400px; margin: 30px auto"></div>
+					<div class="advertising-negotiation">
+						<p class="tc">本社区提供高校活动宣传及广告投放业务。合作热线：13660449184 温先生 WeChat：gswhh2014</p>
+					</div>
+				</li>
+			</ul>
 		</div>
 	</div>
-	<!-- 正文内容 end -->
-	<div class="shade">
-		<div class="mask"></div>
-	</div>
-	<!-- 遮罩层 end-->
-	<div id="modal-alert" class="iziModal"></div>
-	<div id="modal-alert1" class="iziModal"></div>
-	<div id="modal-alert2" class="iziModal"></div>
+</div>
+<!-- 正文内容 end -->
+<div class="shade">
+	<div class="mask"></div>
+</div>
+<!-- 遮罩层 end-->
+<div id="modal-alert" class="iziModal"></div>
+<div id="modal-alert1" class="iziModal"></div>
+<div id="modal-alert2" class="iziModal"></div>
 	<!--
 	<div class="register-form hide" id="register-form">
 		<div class="tt">
