--- a/sale_things.html
+++ b/sale_things.html
@@ -33,9 +33,9 @@
 		<div id="wrapper">
 			<div id="menu">
 				<ul class="nav">	
-					<li><a href="#">围诚热点</a></li>
+					<li><a href="indexx.html">围诚热点</a></li>
 					<li><a href="bbs.html">围诚Plus</a></li>
-					<li class="cur"><a href="#">围诚三天</a></li>
+					<li class="cur"><a href="sale.html">围诚三天</a></li>
 					<li><a href="javascript:void(0);">我的围诚</a></li>
 				</ul>
 			</div>
@@ -61,7 +61,7 @@
 						<li><p class="p_price">价格：<span class="price">1200元</span></p></li>
 						<li><p>交易地址：<span class="local">广州商学院</span></p></li>
 						<li><p>新旧程度：<span class="new">7成新</span></p></li>
-						<li><a href="javascript:void(0);">+私聊联系</a></li>
+						<li><a href="javascript:void(0);" class="talkwithme">+私聊联系</a></li>
 					</ul>
 				</div>
 				<div class="txt">
@@ -278,10 +278,85 @@
 		
 	</div>
 	<!-- 登录界面 end-->
-
-
-	<script src="js/sale.js"></script>
+	<div class="footer-lump">
+		<div class="layout">
+			<ul class="clearfix">
+				<li><a href="#">围诚热点</a></li>
+				<li><a href="#">围诚论坛</a></li>
+				<li class="cur"><a href="#">围诚二手</a></li>
+				<li><a href="#">我的围诚</a></li>
+			</ul>
+			<div class="txt"><p>广告合作热线： 温先生 13660449184  麦先生 15999987056 <br/>
+				网站运营<span>：</span>围诚社区<br/>
+				公司地址<span>：</span>广东省广州市黄埔区九龙镇广州商学院<br/>
+			版权所有：Copyright &copy; 2017-2020 物联科技有限公司</p> 
+			<div class="img-box">
+				<img src="images/common/other.png">
+			</div>
+		</div>
+	</div>
 	<script src="js/common.js"></script>
 	<script src="js/placeholder.js"></script> 
+	<script>
+
+$(document).ready(function(){
+	/* 判定是否有缓存数据 */
+	var storage = window.localStorage;
+	var read_data = storage.getItem("data");
+	var data_obj = JSON.parse(read_data);
+	var fllag = false; // 是否有缓存标志位。
+	var all_page;
+	if(read_data){
+		console.log("本地有缓存数据，正在进行ajax请求校验....");
+		$.ajax({  
+			type: "get",  
+			// 老麦提供接口
+			url: "data/bbs_test.json",  
+			dataType: "json",
+			data: JSON.stringify(data_obj.phone),  
+			success: function (res) {  
+	                //alert(res);  
+	                //layer.close(ii); 
+	                if(res.flag){
+	                	console.log("该用户手机号码存在....");
+	                	$('.head').find("img").attr("src",res.user_id.head_src);
+	                	if(res.user_id.name==""){
+	                		console.log("该用户昵称未填写....");
+	                		$('.head').find("p").empty().html("用户&nbsp;"+ res.user_id.phone +"&nbsp;").addClass("blue");
+	                		$('.head').append('<a class="ml-10 over" href="javascript:void(0);">注销</a>')
+	                		fllag = true;
+	                	}else{
+	                		console.log("该用户昵称已填写....");
+	                		$('.head').find("p").empty().html(""+ res.user_id.name).addClass("blue");
+	                		$('.head').append('<a class="ml-10 over" href="javascript:void(0);">注销</a>')
+	                		fllag = true;
+	                	}
+	                }else{
+	                	console.log("该用户手机号码不存在....");
+	                	fllag = false;
+	                }	           
+	            },
+	            error:function(XMLHttpRequest, textStatus, errorThrown){  
+	            	console.log("请求对象XMLHttpRequest: " + XMLHttpRequest);  
+	            	console.log("错误类型textStatus: " + textStatus);  
+	            	console.log("异常对象errorThrown: " + errorThrown);  
+	            }  
+	        });
+	}else{
+		console.log("本地无缓存数据....");
+		fllag = false;
+	}
+	$(".side-navigation li.top a").click(function(){
+		$("html,body").animate({scrollTop: 0}, 1000);
+	});
+
+	$('.things-content .talkwithme').click(function(){
+		if(!fllag){
+			alert("请先登录！");
+		}
+	});
+
+});
+	</script>
 </body>
 </html>
