个人中心板块-子模块业务逻辑代码开发

--- a/indexx.html
+++ b/indexx.html
@@ -317,6 +317,7 @@
 	<div id="modal-alert" class="iziModal"></div>
 	<div id="modal-alert1" class="iziModal"></div>
 	<div id="modal-alert2" class="iziModal"></div>
+	<div id="modal-alert3" class="iziModal"></div>
 	<ul class="side-navigation">
 		<li class="contact"><a href="#"><i></i>商务<br>洽谈<img src="images/index/contact.jpg"></a></li>
 		<li class="money"><a href="#"><i ></i>支持<br>我们<img src="images/index/money.jpg"></a></li>
